infrastructure-testing/alpha-canary/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alpha-canary
  labels:
    istio.io/rev: prod-canary
