infrastructure-testing/alpha-canary/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpha-canary
  namespace: alpha-canary
  labels:
    app: nginx
spec:
  replicas: 0
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
            name: nginx-http
